<resources>
    <string name="app_name">ActividadesRestRetrofit</string>
    <string name="action_settings">Settings</string>

    <string name="nueva">Nueva actividad</string>
    <string name="idprofesor">Id del profesor</string>
    <string name="tipo">Tipo de actividad</string>
    <string name="complementaria">Complementaria</string>
    <string name="extraescolar">Extraescolar</string>
    <string name="inicio">Inicio</string>
    <string name="fin">Fin</string>
    <string name="fecha">yyyy-mm-dd</string>
    <string name="hora">hh:mm</string>
    <string name="lugar">Lugar</string>
    <string name="descripcion">Descripción de la actividad</string>
    <string name="alumno">Alumno</string>

    <string name="si">Actividad guardada</string>
    <string name="no">Error al guardar la actividad</string>

    <string name="nombre">Javier</string>
</resources>
